update README for 0.0.82

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ output:
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Build Status](https://ci.appveyor.com/api/projects/status/github/tidyfun/tidyfun?branch=master&svg=true)](https://ci.appveyor.com/project/tidyfun/tidyfun/branch/master)
 [![codecov.io](https://codecov.io/github/tidyfun/tidyfun/coverage.svg?branch=master)](https://codecov.io/github/tidyfun/tidyfun/branch/master)
-  <!-- badges: end -->
+<!-- badges: end -->
 
 
 
@@ -69,7 +69,7 @@ For detailed information on the features of `tidyfun`, check out articles on the
 
 The result is a package that enables exploratory data analysis like the following, which computes group-specific mean curves in the `dti_df` dataset, and plots the result:
 
-```{r message=FALSE}
+```{r message=FALSE, warning = FALSE}
 library("tidyfun")
 data(dti_df, package = "tidyfun")
 
