--- a/vignettes/x05_Advice.Rmd
+++ b/vignettes/x05_Advice.Rmd
@@ -7,7 +7,7 @@ output:
       fig_width: 12
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Visualization}
+  %\VignetteIndexEntry{Advice}
   %\VignetteEncoding{UTF-8}
 ---
 
