whole bunch of vctrs stuff ...
- most of the concatenate code is now in tidyverse_vctrs, which is modeled off the sf package
- added some stuff that will generate prototypes of various classes

--- a/vignettes/x03_Data_Wrangling.Rmd
+++ b/vignettes/x03_Data_Wrangling.Rmd
@@ -114,7 +114,8 @@ chf_df %>%
 
 Functions for data manipulation from `tidyr` are also supported. We illustrate by using `pivot_wider` to create new `tfd` observations of activity for each day of the week:
 
-```{r}
+```{r, eval = FALSE}
+## CURRENTLY BROKEN 
 chf_df %>% 
   select(id, day, activity) %>% 
   pivot_wider(
