--- a/vignettes/x03_Data_Wrangling.Rmd
+++ b/vignettes/x03_Data_Wrangling.Rmd
@@ -59,11 +59,11 @@ data(chf_df)
 chf_df
 ```
 
-A quick plot of these data is below.
+A quick plot of the first 5 curves:
 
 ```{r plot_chf}
-chf_df %>% 
-  ggplot(aes(y = activity)) + geom_spaghetti(alpha = .05)
+chf_df[1:5,] %>% 
+  ggplot(aes(y = activity)) + geom_spaghetti(alpha = .1)
 ```
 
 The `tidyfun::dti_df` contains fractional anisotropy (FA) tract profiles for the corpus callosum (cca) and the right corticospinal tract (rcst), along with several covariates. 
@@ -88,13 +88,13 @@ Dataframes using `tidyfun` to store functional observations can be manipulated u
 ```{r}
 chf_df %>% 
   select(id, day, activity) %>% 
-  filter(day == "Monday") %>% 
+  filter(day == "Mon") %>% 
   ggplot(aes(y = activity)) + 
-  geom_spaghetti(alpha = .05)
+  geom_spaghetti(alpha = .05) 
 ```
 
-Operations using `group_by` and `summarize` are allowed:
-
+Operations using `group_by` and `summarize` also work -- let's look at some
+daily averages of these activity profiles:
 ```{r}
 chf_df %>% 
   group_by(day) %>% 
@@ -106,13 +106,13 @@ chf_df %>%
 One can `mutate` functional observations -- here we exponentiate the log activity counts to obtain original recordings:
 
 ```{r}
-chf_df %>% 
+chf_df[1:5,] %>% 
   mutate(exp_act = exp(activity)) %>% 
   ggplot(aes(y = exp_act)) + 
-  geom_spaghetti(alpha = .05)
+  geom_spaghetti(alpha = .2)
 ```
 
-Functions for data manipulation from `tidyr` are also supported. We illustrate by using `pivot_wider` to create new `tfd` observations of activity for each day of the week:
+Functions for data manipulation from `tidyr` are also supported. We illustrate by using `pivot_wider` to create new `tfd`-columns containing the activity profiles for each day of the week:
 
 ```{r}
 chf_df %>% 
@@ -127,9 +127,9 @@ chf_df %>%
 It's also possible to join datasets based on non-functional keys. To illustrate, we'll first create a pair of datasets:
 
 ```{r}
-monday_df = filter(chf_df, day == "Mon") %>% 
+monday_df <- filter(chf_df, day == "Mon") %>% 
   select(id, monday_act = activity)
-friday_df = filter(chf_df, day == "Fri") %>% 
+friday_df <- filter(chf_df, day == "Fri") %>% 
   select(id, friday_act = activity)
 ```
 
@@ -143,7 +143,8 @@ left_join(monday_df, friday_df, by = "id") %>%
     values_to = "activity")
 ```
 
-Similar tidying can be done for the DTI data.
+Similar tidying can be done for the DTI data -- let's look at average RCST tract values for
+gender and case status: 
 
 ```{r}
 dti_df %>% 
@@ -160,10 +161,13 @@ dti_df %>%
 Some `dplyr` functions are useful in conjunction with new functions in `tidyfun`. For example, one might use `filter` with `tf_anywhere` to filter based on the values of observed functions:
 
 ```{r}
-chf_df %>% 
-  filter(tf_anywhere(activity, value > 9)) %>% 
+like_to_move_it_move_it <- chf_df %>% 
+  filter(tf_anywhere(activity, value > 9)) 
+glimpse(like_to_move_it_move_it)
+
+like_to_move_it_move_it %>% 
   ggplot(aes(y = activity)) + 
-  geom_spaghetti()
+  geom_spaghetti(aes(colour = id))
 ```
 
 A second example of this functionality in the DTI data is below.
@@ -206,25 +210,27 @@ chf_df %>%
   filter(id == 1) %>% 
   mutate(daytime_act = tf_zoom(activity, 360, 1200)) %>% 
   ggplot(aes(y = daytime_act)) + 
-  geom_spaghetti()
+  geom_spaghetti(alpha = .2)
 ```
 
-It's possible to compute derivatives as part of a processing pipeline. 
+We can also convert from `tfd` to `tfb` inside a `mutate` statement as part of a data processing pipeline:
 
+```{r}
+dti_df <- dti_df %>%
+  mutate(
+    cca_fpc = tfb_fpc(cca, arg = seq(0, 1, l = 93), pve = .9)
+  )  
+```
+
+It's also possible to compute derivatives as part of a processing pipeline:
 ```{r}
 dti_df %>%
   mutate(
-    cca_smooth = tfb(cca, k = 15, verbose = FALSE),
-    cca_deriv = tf_derive(cca_smooth)
+    cca_raw_deriv = tf_derive(cca),
+    cca_fpc_deriv = tf_derive(cca_fpc)
   ) %>%
-  ggplot(aes(y = cca_deriv)) + 
-    geom_spaghetti()
+  ggplot() + 
+    geom_spaghetti(aes(y = cca_raw_deriv), alpha = .2, lwd = .1, col = "blue") +
+    geom_spaghetti(aes(y = cca_fpc_deriv), alpha = .2, lwd = .1, col = "red")
 ```
 
-Lastly, we note that it's possible to convert from `tfd` to `tfb` vectors; this can be done inside a `mutate` statement as part of a data processing pipeline:
-
-```{r}
-chf_df %>% 
-  mutate(act_basis = tfb(activity)) %>% 
-  select(id, gender, act_basis)
-```
