--- a/vignettes/x02_Conversion.Rmd
+++ b/vignettes/x02_Conversion.Rmd
@@ -7,7 +7,7 @@ output:
       fig_width: 12
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Converting to tf}
+  %\VignetteIndexEntry{Converting to & from `tf`}
   %\VignetteEncoding{UTF-8}
 ---
 
