bavarian lives matter

--- a/vignettes/x04_Visualization.Rmd
+++ b/vignettes/x04_Visualization.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Visualization"
-author: "Jeff Goldsmith"
+author: "Jeff Goldsmith, Fabian Scheipl"
 date: "`r Sys.Date()`"
 output: 
     rmarkdown::html_vignette:
