--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output:
 # tidyfun <img src="https://github.com/tidyfun/tidyfun/blob/master/README_files/figures/tidyfun_hex.gif?raw=true" align="right" height = "150" />
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![R build status](https://github.com/tidyfun/tidyfun/workflows/R-CMD-check/badge.svg)](https://github.com/tidyfun/tidyfun/actions)
 [![codecov.io](https://codecov.io/github/tidyfun/tidyfun/coverage.svg?branch=master)](https://codecov.io/github/tidyfun/tidyfun/branch/master)
 [![MIT
@@ -89,7 +89,7 @@ dti_df %>%
 
 #### New vector-like data types for functional data
 
-**`tidyfun`** provides [new `S3`-classes for functional data](https://tidyfun.github.io/tidyfun/reference/index.html#section-tf-sub-classes-constructors-converters), either as raw data (class `tfd` for *t*idy *f*unctional *d*ata) or in basis representation (class `tfb` for *t*idy *f*unctional *b*asis data). 
+**`tidyfun`** introduces [new `S3`-classes for functional data](https://tidyfun.github.io/tidyfun/reference/index.html#section-tf-sub-classes-constructors-converters), either as raw data (class `tfd` for *t*idy *f*unctional *d*ata) or in basis representation (class `tfb` for *t*idy *f*unctional *b*asis data), defined in the underlying [**`{tf}`**](https://github.com/tidyfun/tf) package. 
 
 Such `tf`-objects can be subsetted or subassigned, computed on and summarized. 
 
@@ -104,6 +104,7 @@ are defined for **`tidyfun`**'s data structures ([more](https://tidyfun.github.i
 The `tf` objects are basically glorified lists, so they work well as columns in data frames. That makes it a lot easier to keep your other data and functional measurements together in one object for preprocessing, exploratory analysis and description. At the same time, these objects actually behave like vectors of *functions* to some extent, i.e., they can be evaluated on any point in their domain, they can be integrated or differentiated, etc.
 
 [See here](https://tidyfun.github.io/tidyfun/articles/x01_tf_Vectors.html) for more information on the operations defined for `tf` vectors. 
+<!-- TODO: link developer vignette here as well, eventually -->
 
 #### Methods for converting existing data to `tf` 
 
@@ -125,7 +126,7 @@ All `dplyr` verbs work on `tf`-columns, so you can `filter`, `mutate`, `group_by
 - **`geom_spaghetti`** for lines,
 - **`geom_meatballs`**  for (lines &) points,
 - **`gglasagna`** for [lasagna plots](https://asset.jmir.pub/assets/76aeec48564abf0e6f6da8e9cd06346d.png), with an **`order`**-aesthetic to sort the lasagna layers,
-- **`geom_capellini`** for [glyphs](http://ggobi.github.io/ggally/index_files/figure-html/glyphs-basic-usage-1.png) plots (i.e., sparklines),
+- **`geom_capellini`** for [glyphs](http://ggobi.github.io/ggally/articles/glyph_files/figure-html/glyphs-basic-usage-1.png) plots (i.e., sparklines),
 
 as well as new methods for base R graphics functions `plot`, `lines` and `points` for quick and easy visualizations of functional data. 
 
