fix GH actions agänn

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,7 @@ output:
 [![codecov.io](https://codecov.io/github/tidyfun/tidyfun/coverage.svg?branch=master)](https://codecov.io/github/tidyfun/tidyfun/branch/master)
 [![MIT
 license](http://img.shields.io/badge/license-MIT-brightgreen.svg)]( https://opensource.org/licenses/MIT)
+[![R-CMD-check](https://github.com/tidyfun/tidyfun/workflows/R-CMD-check/badge.svg)](https://github.com/tidyfun/tidyfun/actions)
 <!-- badges: end -->
 
 
